level 1 coding is completed and code is ready to give to cdi team

--- a/src/db.properties
+++ b/src/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/capsvolunteer
+url=jdbc:mysql://localhost:3306/caps
 user=root
 password=student
